Se ajusto el codigo en desarrollado react-typescript y con el sdk arcgis js para que se integre nativamente al codigo en asp.net y razor

--- a/Views/Home/TestMap.cshtml
+++ b/Views/Home/TestMap.cshtml
@@ -5,5 +5,5 @@
 <div id="react-filter" class="w-100 h-100"></div>
 
 @section Scripts {
-    <script src="~/js/filter/bundle_filter.js" type="module"></script>
+    <partial name="_ReactFilterScripts" />
 }
