--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,5 +5,6 @@
 <div id="react-filter" class="w-100 h-100"></div>
 
 @section Scripts {
-    <script src="~/js/filter/bundle_filter.js" type="module"></script>
+    <partial name="_TempDataToReact" />
+    <partial name="_ReactFilterScripts" />
 }
