--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,9 +2,4 @@
     <iframe src="http://localhost:5173" width="100%" height="100%"></iframe>
 </div> -->
 
-<div id="react-filter" class="w-100 h-100"></div>
-
-@section Scripts {
-    <partial name="_TempDataToReact" />
-    <partial name="_ReactFilterScripts" />
-}
+<react-mount mount-id="react-filter"></react-mount>
