--- a/Views/Home/JsonImport.cshtml
+++ b/Views/Home/JsonImport.cshtml
@@ -14,6 +14,9 @@
                 <button type="submit" class="btn btn-primary">Import scenario</button>
                 @Html.AntiForgeryToken()
             </form>
+            <div class="mt-2">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            </div>
         </div>
     </div>
 
