Updated leftsidbar + also added right sidebar for project information

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -18,25 +18,41 @@
 </head>
 <body class="d-flex flex-column overflow-hidden h-100">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">App_ASP_PDT</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="JsonImport">JSON Import</a>
-                        </li>
-                    </ul>
-                </div>
+<nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom shadow-sm py-0 custom-navbar">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+
+        <!-- Left: PennDOT Branding -->
+        <div class="d-flex mx-3 my-2 justify-content-between">
+            <div class="d-flex  align-items-center">
+                <a asp-controller="Home" asp-action="Index" class="d-flex align-items-center text-decoration-none">
+                    <img src="~/images/logo.png"
+                         alt="Pennsylvania Department of Transportation"
+                         class="penn-dot-logo me-2" />
+                </a>
             </div>
-        </nav>
+
+            <!-- Center: ProjectBuilder Branding -->
+            <div class="mx-auto">
+                <a asp-controller="Home" asp-action="Index">
+                    <img src="~/images/project-builder.png"
+                         alt="ProjectBuilder"
+                         class="project-builder-logo" />
+                </a>
+            </div>
+        </div>
+
+        <!-- Right: User Icon -->
+        <div class="d-flex align-items-center">
+            <a href="#" class="nav-link">
+                <img src="~/images/user.png" 
+                     alt="User Profile" 
+                     class="user-icon" />
+            </a>
+        </div>
+    </div>
+</nav>
+
+
     </header>
     <div class="w-100 h-100">
         <main role="main" class="w-100 h-100">
