--- a/front-end/arcgis-app/src/components/project-treatment/projectTreatment.module.css
+++ b/front-end/arcgis-app/src/components/project-treatment/projectTreatment.module.css
@@ -1,12 +1,13 @@
 
 .project-treatments-bar {
   width: 100%;
-  height: 70px;
-  background-color: #15346a;
+  height: 80px;
+  background-color:#C8D8E8;
   display: flex;
   align-items: center;
   justify-content: space-between;
   z-index: 2000;
+  border-bottom: 1px solid #fff; /* ✅ fixed */
 }
 
 .project-treatments-action {
